sdk/ionic/2.0/groups-leave-group.mdx
---
title: "Leave A Group"
---



## Leave a Group

In order to stop receiving updates and messages for any particular joined group, you will have to leave the group using the `leaveGroup()` method.

<Tabs>
<Tab title="JavaScript">
```js
var GUID = "GUID"; // guid of the group to join

CometChat.leaveGroup(GUID).then(
  (hasLeft) => {
    console.log("Group left successfully:", hasLeft);
  },
  (error) => {
    console.log("Group leaving failed with exception:", error);
  }
);
```

</Tab>

</Tabs>

| Parameter | Description                                  |
| :--------- | :-------------------------------------------- |
| `GUID`    | The UID of the group you would like to leave |

Once a group is left, the user will no longer receive any updates or messages pertaining to the group.

## Real-time Group Member Left Events

*In other words, as a member of a group, how do I know if someone has left it?*

If a user leaves any group, The members of the group receive a real-time event in the `onGroupMemberLeft()` method of the `GroupListener` class.

<Tabs>
<Tab title="Group Listener">
```
CometChat.addGroupListener(
  "UNIQUE_LISTENER_ID",
  new CometChat.GroupListener({
    onGroupMemberLeft: (message, leavingUser, group) => {
      console.log("User left", { message, leavingUser, group });
    },
  })
);
```

</Tab>

</Tabs>

## Missed Group Member Left Events

*In other words, as a member of a group, how do I know if someone has left it when my app is not running?*

When you retrieve the list of previous messages if a member has left any group that the logged-in user is a member of, the list of messages will contain an `Action` message. An `Action` message is a sub-class of `BaseMessage` class.

For the group member left event, in the `Action` object received, the following fields can help you get the relevant information-

1. `action` - `left`
2. `actionBy` - User object containing the details of the user who left the group
3. `actionFor` - Group object containing the details of the group the user has left
